--- a/api/schema/v1.yaml
+++ b/api/schema/v1.yaml
@@ -783,6 +783,9 @@ $defs:
       id:
         type: string
         description: id of package manager search
+      repo:
+        type: string
+        description: repo of package manager search
   PackageManager1JobInfo:
     type: object
     description: Get the job result using an ID
@@ -797,11 +800,16 @@ $defs:
     description: result of package manager search
     allOf:
       - $ref: '#/$defs/CommonResult'
+    required:
+      - repo
     properties:
       packages:
         type: array
         items:
           $ref: '#/$defs/PackageInfoV2'
+      repo:
+        type: string
+        description: repo of package manager search
   PackageManager1GetRepoInfoResult:
     type: object
     description: result of package manager get repo info
