feat: support install app by priority
Support install the app from the specified repo.O

Signed-off-by: ice909 <gaochang1@uniontech.com>

--- a/api/schema/v1.yaml
+++ b/api/schema/v1.yaml
@@ -731,6 +731,9 @@ $defs:
               type: string
       options:
         $ref: '#/$defs/CommonOptions'
+      repo:
+        type: string
+        description: repo of package manager install
   PackageManager1PackageTaskResult:
     description: package manager task result
     allOf:
